--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <h1>Trivia Game</h1>
             <button class="btn btn-success" id="start">Start</button>
         </div>
-        <div class="row" id="card">
-            <h2>Trivia content goes here.</h2>
-            
+        <div class="row">
+            <div class="col" id="card">
+                <h2>Trivia content goes here.</h2>
+            </div>
         </div>
         <div class="row" id="footer"><h3>This is a footer</h3></div>
     </container>
