--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Trivia Game</h1>
             <button class="btn btn-success" id="start">Start</button>
         </div>
-        <div class="row">
+        <div class="row" id="content">
             <div class="col" id="card">
                 <h2>Trivia content goes here.</h2>
             </div>
