added additional columns on the content row for layout spacing

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             <button class="btn btn-success" id="start">Start</button>
         </div>
         <div class="row" id="content">
-            <div class="col" id="card">
+            <div class="col-2"></div>
+            <div class="col-8" id="card">
                 <h2>Trivia content goes here.</h2>
             </div>
+            <div class="col-2"></div>
         </div>
         <div class="row" id="footer"><h3>This is a footer</h3></div>
     </container>
