changed timer text at bottom of page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-2"></div>
         </div>
         <div class="row" id="footer">
-            <h3>Timer</h3><h3 id="time"></h3>
+            <h3>Time 0:00</h3><h3 id="time"></h3>
         </div>
     </container>
 
