--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <container>
         <div class="row" id="header">
-            <h1>Trivia Game</h1>
+            <h1>The 7 Wonders of the Modern World</h1>
         </div>
         <div class="row" id="content">
             <div class="col-2"></div>
             <div class="col-8" id="card">
                 <h2>Push Start To Begin The Quiz</h2>
-                <div><button class="btn btn-success" id="start">Start</button></div>
+                <div><button class="btn btn-success btn-lg" id="start">Start</button></div>
             </div>
             <div class="col-2"></div>
         </div>
         <div class="row" id="footer">
-            <h3>Time 0:00</h3><h3 id="time"></h3>
+            <h3 id="time">Time: &nbsp;</h3>
         </div>
     </container>
 
